--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
         "grunt": ">=1.3.0",
         "grunt-contrib-less": "~0.11.4",
         "grunt-contrib-watch": "~0.6.1",
-        "grunt-banner": "~0.2.3",
+        "grunt-banner": "^0.6.0",
         "grunt-contrib-uglify": "~0.5.1",
         "@playwright/test": "^1.40.0"
     },
