renamed the test step

--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
         "boil"   : "git push boilerplate boilerplate:master",
         "push"   : "git push origin master --tag",
         "cafe"   : "git co gitcafe-pages; git merge master; git push gitcafe gitcafe-pages:gitcafe-pages --tag; git co master;",
-        "test": "playwright test",
+        "test:e2e": "playwright test",
         "test:headed": "playwright test --headed",
         "test:ui": "playwright test --ui"
     }
